--- a/src/components/sections/Reviews.astro
+++ b/src/components/sections/Reviews.astro
@@ -31,7 +31,7 @@ const reviews = [
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <!-- Título -->
     <h2
-      class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl mb-16 sm:mb-20"
+      class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl mb-16 sm:mb-20 font-bold"
     >
       Our Customers
     </h2>
@@ -43,7 +43,7 @@ const reviews = [
           {
             reviews.map((review) => (
               <div class="embla__slide">
-                <div class="flex flex-col lg:flex-row items-center border-4 border-red-400">
+                <div class="flex flex-col lg:flex-row items-center">
                   <!-- Imagen del proyecto -->
                   <div class="w-full lg:w-1/2">
                     <div class="relative rounded-lg overflow-hidden shadow-2xl aspect-[4/3]">
@@ -56,7 +56,7 @@ const reviews = [
                   </div>
 
                   <!-- Tarjeta de Review con SVG animado -->
-                  <div class="flex justify-center lg:justify-start border-4 border-red-400">
+                  <div class="flex justify-center lg:justify-start">
                     <div class="testimonial-wrapper relative">
 
                       <!-- Tarjeta principal -->
