--- a/src/components/sections/WhatWeDo.astro
+++ b/src/components/sections/WhatWeDo.astro
@@ -6,7 +6,7 @@ import homeIcon from "@/assets/home.svg";
 ---
 
 <section
-  class="bg-black text-white py-20 sm:py-24 min-h-screen relative overflow-hidden"
+  class="bg-black text-white py-20 sm:py-24 relative overflow-hidden"
 >
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
     <h2
